# mesen2-oos

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  makefile  test_agent_integration.py  test_debug_hooks.py  test_new_commands.py  test_p1_handlers.py  test_p2_e2e.py  test_p2_events.py  test_p2_yaze.py  test_socket_api_full.py
Core/: Core.vcxproj  Core.vcxproj.filters
Core/Debugger/: CallstackManager.cpp  Debugger.cpp  Debugger.h  LuaApi.cpp  ScriptingContext.cpp
Core/SNES/: SnesCpu.Instructions.h  SnesCpu.Shared.h  SnesCpu.cpp  SnesCpu.h  Spc.cpp  Spc.h
Core/SNES/Coprocessors/SA1/: Sa1Cpu.cpp  Sa1Cpu.h
Core/SNES/Debugger/: SnesDebugger.cpp  SnesDebugger.h
Core/SNES/Input/: SnesController.h
Core/Shared/: BaseControlDevice.h  EmuSettings.cpp  Emulator.cpp  Emulator.h  SaveStateManager.cpp  SaveStateManager.h  SettingTypes.h  ShortcutKeyHandler.cpp  SocketServer.cpp  SocketServer.h  SocketServerTest.cpp  YazeStateBridge.cpp  YazeStateBridge.h
Core/Shared/Video/: VideoRenderer.cpp  VideoRenderer.h  WatchHud.cpp  WatchHud.h
InteropDLL/: DebugApiWrapper.cpp  EmuApiWrapper.cpp  InteropNotificationListener.h
MacOS/: MacOSKeyManager.mm
UI/: App.axaml  Program.cs  UI.csproj
UI/Config/: ConfigManager.cs  Configuration.cs  IntegrationConfig.cs  OracleConfig.cs  PreferencesConfig.cs
UI/Config/Debugger/: DebugConfig.cs  DebuggerConfig.cs  DebuggerShortcutsConfig.cs  StateInspectorConfig.cs
UI/Controls/: StateGridEntry.axaml.cs
UI/Debugger/: WatchManager.cs
UI/Debugger/Integration/: DbgImporter.cs  SnesDbgImporter.cs
UI/Debugger/Utilities/: ContextMenuAction.cs  DebugShortcutManager.cs  DebugWindowManager.cs  DebugWorkspaceManager.cs  ToolRefreshHelper.cs  WatchHudService.cs
UI/Debugger/ViewModels/: DebuggerConfigWindowViewModel.cs  DebuggerWindowViewModel.cs  StateInspectorWindowViewModel.cs
UI/Debugger/Windows/: DebuggerConfigWindow.axaml  DebuggerWindow.axaml.cs  ScriptWindow.axaml.cs  StateInspectorWindow.axaml  StateInspectorWindow.axaml.cs
UI/Interop/: DebugApi.cs  EmuApi.cs  NotificationListener.cs
UI/Localization/: resources.en.xml
UI/Utilities/: AgentLauncher.cs  CommandLineHelper.cs  FileDialogHelper.cs  HeadlessRunner.cs  OracleAgentLauncher.cs  OracleAgentManager.cs  OracleAgentStatus.cs  OracleOverlayController.cs  OracleStateActions.cs  OracleStateLibrary.cs  SaveStateLabelStore.cs  SaveStateSlotHelper.cs  SingleInstance.cs
UI/ViewModels/: MainMenuViewModel.cs  MainWindowViewModel.cs  OracleControlCenterViewModel.cs  RecentGamesViewModel.cs  StateLibraryViewModel.cs
UI/Views/: MainMenuView.axaml  MainMenuView.axaml.cs  PreferencesConfigView.axaml
UI/Windows/: HistoryViewerWindow.axaml.cs  MainWindow.axaml.cs  OracleAgentOutputWindow.axaml  OracleAgentOutputWindow.axaml.cs  OracleControlCenterWindow.axaml  OracleControlCenterWindow.axaml.cs  StateLibraryWindow.axaml  StateLibraryWindow.axaml.cs  TextInputWindow.axaml  TextInputWindow.axaml.cs
docs/: Agent_Integration_Guide.md  Agent_Profile_Workflow.md  Mesen2_Fork_Debugging.md  Oracle_Menu_TODO.md  Socket_API_Reference.md
docs/skills/: alttp_debugging.md  memory_tools.md  scripting.md
tools/: build_mesen2_oos_cmake.sh  deploy_core.sh  install_mesen2_oos.sh  mesen-agent  mesen2ctl
